--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,9 @@
 JWT_SECRET = "secret#text"
 NODE_ENV = "development"
 
+#Admin Credentials
+SELLER_EMAIL = "admin@example.com"
+SELLER_PASSWORD = "harsh0727"
+
+# MongoDB Setup
 MONGODB_URI = "mongodb+srv://harryht7:harsh7598@cluster0.uvo2e20.mongodb.net"
